src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Auctions</fullName>
        <description>the sales process to use for all Auction Donated Items, Sponsors, Purchases, etc.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Not Thanked</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>foobar</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed Won - Not Thanked</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Auction_Deductible_Amount__c</fullName>
        <formula>IF ( 
OR ( NOT( $RecordType.Name = &quot;Purchase&quot; ), NOT ( $RecordType.Name = &quot;TBD&quot; ) ) ,
IF(Amount &gt; Auction_Non_Deductible_Amount__c , Amount - Auction_Non_Deductible_Amount__c , 0),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_Donated_Item_Name__c</fullName>
        <inlineHelpText>The short name of the donated auction item.</inlineHelpText>
        <label>Auction Donated Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Donated_Item_Restrictions__c</fullName>
        <inlineHelpText>Any restrictions on the donated item, like when it is not available.  This will get copied over to the Auction Item when it is created.</inlineHelpText>
        <label>Auction Donated Item Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Item_Name__c</fullName>
        <formula>Auction_Item_Purchased__r.Auction_Item_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Item_Purchased__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The auction item this opportunity has purchased.</inlineHelpText>
        <label>Auction Item Purchased</label>
        <referenceTo>Auction_Item__c</referenceTo>
        <relationshipLabel>Opportunities - Purchases</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auction_Non_Deductible_Amount__c</fullName>
        <inlineHelpText>The portion of the opportunity amount that is not tax-deductible (fee for service or product, etc.) Leave blank, or set to $0, if the opp is fully deductible.</inlineHelpText>
        <label>Auction Non-Deductible Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Number__c</fullName>
        <inlineHelpText>The purchaser&apos;s Bid Number at the time the purchase was recorded in the Purchases tab.</inlineHelpText>
        <label>Bid Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Will be sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to pick up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Available__c</fullName>
        <formula>Number_of_Items__c - Number_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Used__c</fullName>
        <inlineHelpText>how many items are part of an Auction Item.</inlineHelpText>
        <label>Number Used</label>
        <summarizedField>Auction_Item_Piece__c.Quantity__c</summarizedField>
        <summaryForeignKey>Auction_Item_Piece__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <inlineHelpText>If the Auction Donated Item is multiple items that can be auctioned, the number of items.</inlineHelpText>
        <label>Number of Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets__c</fullName>
        <inlineHelpText>How many tickets is this Auction Ticket payment for?</inlineHelpText>
        <label>Number of Tickets</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who procurred this auction item.</inlineHelpText>
        <label>Procurred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Procurred Auction Items</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Auction_Opportunities</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Auction_Donated_Item_Name__c</columns>
        <columns>Auction_Item_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GW_Auction_Donated_Item,Opportunity.GW_Auction_Purchased_Item,Opportunity.GW_Auction_Ticket</value>
        </filters>
        <label>All Auction Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>GW_Auction_Donated_Item</fullName>
        <active>true</active>
        <businessProcess>Auctions</businessProcess>
        <description>Auction Donated Item</description>
        <label>GW Auction Donated Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Auction_Purchased_Item</fullName>
        <active>true</active>
        <businessProcess>Auctions</businessProcess>
        <description>Auction Purchased Item</description>
        <label>GW Auction Purchased Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Auction_Ticket</fullName>
        <active>true</active>
        <businessProcess>Auctions</businessProcess>
        <description>Auction Ticket</description>
        <label>GW Auction Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gift</fullName>
        <active>true</active>
        <businessProcess>foobar</businessProcess>
        <label>Gift</label>
    </recordTypes>
</CustomObject>